--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>CMS3‑FAST: VR Example</title>
-  <meta name="description" content="Large DDD model" />
+  <meta name="description" content="large DDD model" />
 
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aframe-extras@7.5.0/dist/aframe-extras.controls.min.js"></script>
@@ -55,7 +55,7 @@
       gltf-model="assets/ddd000bl2.glb"
       position="30 0 10"
       rotation="90 0 0"
-      scale="1 1 1"
+      scale="3 3 3"
     ></a-entity>
 
     <a-entity environment="preset: default"></a-entity>
