--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     ></a-entity>
 
     <a-entity
-      gltf-model="assets/ddd000bl2.glb"
+      gltf-model="assets/ddd000bl.glb"
       position="30 0 10"
       rotation="90 0 0"
       scale="3 3 3"
