--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       scale="12 12 12"
     ></a-entity>
 
+    
+    <a-entity
+      gltf-model="assets/large_DDD_model3lres.glb"
+      position="70 0 10"
+      rotation="90 0 0"
+      scale="3 3 3"
+    ></a-entity>
+    
     <a-entity
       gltf-model="assets/ddd000bl2.glb"
       position="40 0 10"
@@ -68,4 +76,5 @@
 
 </body>
 </html>
+
 
